Added a helper method to generate a url for the notification emails. This also fixes a problem with trying to generate a polymorphic_url for a model that doesn't have restful routes set up for it.

--- a/app/views/content_flagging_notifier/content_flagging_notification.html.haml
+++ b/app/views/content_flagging_notifier/content_flagging_notification.html.haml
@@ -18,7 +18,4 @@
   
 %p
   You can view the flagged content here:
-  -if @attachable
-    =link_to_url(polymorphic_url(@attachable))
-  -else
-    =link_to_url(content_flag_url(@content_flagging.content_flag))
+  =view_flagged_content_url(@content_flagging, @attachable)
